fix truncated text in input

--- a/src/client/assets/styles/components/_search.scss
+++ b/src/client/assets/styles/components/_search.scss
@@ -16,7 +16,8 @@
 
   &__input {
     flex-grow: 1;
-    height: 1.5rem;
+    min-height: 1.5rem;
+    line-height: 1.5rem;
 
     &::placeholder {
       color: $col-gray-medium;
